--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-title" content="Calculadora IP">
     <title>Calculadora IP Pro</title>
     
+   <link rel="icon" type="image/png" href="favicon.png">
     <link rel="manifest" href="manifest.json">
 
     <style>
