--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="apple-mobile-web-app-title" content="Calculadora IP">
     <title>Calculadora IP Pro</title>
     
-   <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="favicon.png">
     <link rel="manifest" href="manifest.json">
 
     <style>
